# Forklore

./: .gitignore  CLAUDE.md  Proposal.MD  README.md  pyproject.toml  workflow_diagram.MD
src/forklore/: Proposal.MD  __init__.py  app.py  models.py  test_factsheet.py  test_foods.py
src/forklore/ai/: fatsecret_routing.py  ingredients.py  llm.py  refinement.py  summary.py  test_refine.py
src/forklore/core/: combine.py  customize.py  grader.py  retrieval.py
src/forklore/data/: fatsecret_client.py  fatsecret_search.py  usda_client.py
src/forklore/ui/: themes.py
