[project]
name = "forklore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mashiur", email = "56059603+AppleCoder20-source@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fatsecret>=4.0.4",
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.4",
    "langchain-ollama>=1.1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]

[project.scripts]
forklore = "forklore:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
